# traverse

./: .gitignore  Cargo.toml  README.md  flake.nix  test_config.json
crates/traverse-cli/: Cargo.toml
crates/traverse-cli-core/: Cargo.toml
crates/traverse-cli-core/src/: formatters.rs  lib.rs
crates/traverse-cli-cosmos/: Cargo.toml
crates/traverse-cli-cosmos/src/: commands.rs  main.rs
crates/traverse-cli-ethereum/: Cargo.toml
crates/traverse-cli-ethereum/src/: commands.rs  main.rs
crates/traverse-cli-solana/: Cargo.toml
crates/traverse-cli-solana/src/: commands.rs  main.rs
crates/traverse-cli/src/: cli.rs  formatters.rs  main.rs
crates/traverse-cli/src/commands/: codegen.rs  cosmos.rs  ethereum.rs  layout.rs  minimal.rs  mod.rs  proof.rs  resolve.rs  solana.rs  unified.rs
crates/traverse-core/: Cargo.toml
crates/traverse-core/src/: constrained.rs  error.rs  key.rs  layout.rs  lib.rs  semantic.rs  traits.rs
crates/traverse-cosmos/: Cargo.toml
crates/traverse-cosmos/src/: contract.rs  layout.rs  lib.rs  proof.rs  resolver.rs
crates/traverse-ethereum/: Cargo.toml
crates/traverse-ethereum/src/: abi_fetcher.rs  alloy.rs  indexer.rs  layout.rs  lib.rs  proof.rs  resolver.rs  rlp_tests.rs
crates/traverse-ethereum/tests/: complex_contracts.rs  integration.rs  rlp_tests.rs  validated_ethereum_data.rs
crates/traverse-solana/: Cargo.toml  README.md
crates/traverse-solana/src/: account.rs  anchor.rs  error.rs  layout.rs  lib.rs  proof.rs  resolver.rs
crates/traverse-solana/tests/: test_idl_parsing.rs
crates/traverse-valence/: Cargo.toml
crates/traverse-valence/src/: abi.rs  circuit.rs  codegen.rs  controller.rs  domain.rs  lib.rs  messages.rs  minimal_codegen.rs  utils.rs
docs/: architecture.md  best_practices.md  feature_flags.md  integration_guide.md  security_testing.md  semantic_storage_proofs.md  test_data_validation.md  valence_integration_guide.md
e2e/: Cargo.toml
e2e/src/: fixtures.rs  main.rs  test_core.rs  test_cosmos.rs  test_ethereum.rs  test_solana.rs  test_unified.rs  utils.rs
e2e/src/fixtures/cosmos/: cw20_msg.json  cw721_msg.json
e2e/src/fixtures/ethereum/: defi.abi.json  erc20.abi.json  erc20.layout.json
e2e/src/fixtures/queries/: complex.txt  cosmos.txt  simple.txt
e2e/src/fixtures/solana/: token_program.idl.json
examples/: circuit_usage.rs  comprehensive_abi_example.rs  constrained_environment_example.rs  lightweight_alloy_example.rs  minimal_circuit_example.rs  minimal_generated.rs  semantic_business_logic.rs  semantic_cli_integration.rs  semantic_conflict_resolution.rs  solana_idl_example.rs  usdt_live_proof.rs  valence_integration.rs  valence_vault_storage.rs
scripts/: benchmark.sh  test_all_build_paths.sh  test_solana_e2e.sh
workspace-configs/: Cargo.lock.core  Cargo.lock.cosmos  Cargo.lock.ethereum  Cargo.lock.solana  Cargo.toml.core  Cargo.toml.cosmos  Cargo.toml.ethereum  Cargo.toml.solana
