[workspace]
members = [
    "crates/traverse-core",
    "crates/traverse-cosmos",
    "crates/traverse-valence",
    "crates/traverse-cli-core",
    "crates/traverse-cli-cosmos",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Timewave Labs"]
license = "Apache-2.0"
repository = "https://github.com/timewave-computer/traverse"
homepage = "https://github.com/timewave-computer/traverse"
description = "Chain-independent ZK storage path generator for blockchain state verification"
keywords = ["zk", "blockchain", "cosmos", "storage", "proof"]
categories = ["cryptography", "development-tools"]

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
keccak = { version = "0.1", default-features = false }
tiny-keccak = { version = "2.0", features = ["keccak"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
proptest = "1.0"
tempfile = "3.0"
anyhow = "1.0"
dotenv = "0.15"
log = "0.4"
base64 = "0.22"
bincode = "1.3"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
ics23 = { version = "0.12", default-features = false, features = ["std", "host-functions"] }
cosmwasm-schema = { version = "2.0" }
cosmwasm-std = { version = "2.0", features = ["stargate"] }
cosmos-sdk-proto = { version = "0.21" }
rlp = { version = "0.5", default-features = false }
tera = { version = "1.0" } 