# End-to-end test suite for traverse CLI commands
[package]
name = "traverse-e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
traverse-core = { path = "../crates/traverse-core", features = ["std", "serde_json"] }
traverse-ethereum = { path = "../crates/traverse-ethereum" }
traverse-cosmos = { path = "../crates/traverse-cosmos" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
hex = "0.4"
toml = "0.8"
serde_yaml = "0.9"
base64 = "0.22"

[dev-dependencies]
pretty_assertions = "1.4" 