# CLI for traverse storage path generation
[package]
name = "traverse-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for traverse storage path generation"
keywords.workspace = true
categories.workspace = true

[features]
default = []
client = ["traverse-ethereum/client", "dep:valence-domain-clients", "dep:alloy"]

[dependencies]
traverse-core = { path = "../traverse-core", features = ["std", "serde_json"] }
traverse-ethereum = { path = "../traverse-ethereum" }
traverse-cosmos = { path = "../traverse-cosmos" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
toml = "0.8"
bincode = "1.3"
base64 = "0.22"
futures = "0.3"
serde_yaml = "0.9"
glob = "0.3"

# Optional valence-domain-clients integration for live proof generation
valence-domain-clients = { git = "https://github.com/timewave-computer/valence-domain-clients.git", branch = "main", optional = true }
alloy = { version = "0.9.2", features = ["provider-http"], optional = true }

[dev-dependencies]
tempfile.workspace = true 