# CLI for traverse storage path generation
[package]
name = "traverse-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for traverse storage path generation"
keywords.workspace = true
categories.workspace = true

[features]
default = ["std", "ethereum", "cosmos", "dep:base64", "dep:bincode", "dep:glob", "dep:toml"]
std = ["traverse-core/std", "traverse-ethereum?/std", "dep:tokio", "dep:tracing-subscriber"]
ethereum = ["dep:traverse-ethereum", "traverse-ethereum?/ethereum"]
cosmos = ["dep:traverse-cosmos"]
minimal = ["traverse-core/minimal"]
client = ["ethereum", "traverse-ethereum?/client", "dep:valence-domain-clients", "dep:alloy"]

[dependencies]
traverse-core = { path = "../traverse-core" }
traverse-ethereum = { path = "../traverse-ethereum", optional = true }
traverse-cosmos = { path = "../traverse-cosmos", optional = true }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
hex.workspace = true

# Heavy dependencies (optional)
tokio = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }

# Additional CLI dependencies
toml = { version = ">=0.8.0,<1.0", optional = true }
bincode = { version = ">=1.3.0,<2.0", optional = true }
base64 = { version = ">=0.21.0,<1.0", optional = true }
futures = { version = ">=0.3.0,<1.0", optional = true }
serde_yaml = { version = ">=0.9.0,<1.0", optional = true }
glob = { version = ">=0.3.0,<1.0", optional = true }

# Optional valence-domain-clients integration for live proof generation
valence-domain-clients = { git = "https://github.com/timewave-computer/valence-domain-clients.git", branch = "main", optional = true }
alloy = { version = ">=0.9.0,<2.0", features = ["provider-http"], optional = true }

[dev-dependencies]
tempfile.workspace = true 