# CLI for traverse storage path generation
[package]
name = "traverse-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for traverse storage path generation"
keywords.workspace = true
categories.workspace = true

[features]
default = ["std", "ethereum", "cosmos", "codegen", "dep:base64", "dep:bincode", "dep:glob", "dep:toml"]
std = ["traverse-core/std", "traverse-ethereum?/std", "traverse-solana?/std", "dep:tokio", "dep:tracing-subscriber"]
ethereum = ["dep:traverse-ethereum", "traverse-ethereum?/ethereum"]
cosmos = ["dep:traverse-cosmos"]
solana = ["dep:traverse-solana", "traverse-solana?/solana"]
minimal = ["traverse-core/minimal"]
client = []
ethereum-client = ["ethereum", "client", "traverse-ethereum?/client"]
codegen = ["dep:traverse-valence", "traverse-valence?/codegen"]

[dependencies]
traverse-core = { path = "../traverse-core" }
traverse-ethereum = { path = "../traverse-ethereum", optional = true }
traverse-cosmos = { path = "../traverse-cosmos", optional = true }
traverse-solana = { path = "../traverse-solana", optional = true }
traverse-valence = { path = "../traverse-valence", optional = true, features = ["codegen"] }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
hex.workspace = true

# Heavy dependencies (optional)
tokio = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }

# Additional CLI dependencies
toml = { version = ">=0.8.0,<1.0", optional = true }
bincode = { version = ">=1.3.0,<2.0", optional = true }
base64 = { version = ">=0.21.0,<1.0", optional = true }
futures = { version = ">=0.3.0,<1.0", optional = true }
serde_yaml = { version = ">=0.9.0,<1.0", optional = true }
glob = { version = ">=0.3.0,<1.0", optional = true }

# Optional valence-domain-clients integration for live proof generation
# valence-domain-clients = { git = "https://github.com/timewave-computer/valence-domain-clients.git", rev = "0b75856", optional = true }

[dev-dependencies]
tempfile.workspace = true 