# Core types and traits for chain-independent ZK storage path generation
[package]
name = "traverse-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types and traits for chain-independent ZK storage path generation"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
hex = { workspace = true }
sha2 = { workspace = true }
keccak = { workspace = true }
tiny-keccak = { workspace = true }
thiserror = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["serde/std", "serde_json/std", "hex/std", "dep:thiserror"]
serde = ["dep:serde", "dep:serde_json"]
no-std = []
minimal = []
wasm = ["serde/std", "serde_json/std"]
constrained = ["no-std"]
embedded = ["constrained"]

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true 