# CosmWasm contract analysis and storage layout generation
[package]
name = "traverse-cosmos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CosmWasm contract analysis and storage layout generation for traverse"
keywords.workspace = true
categories.workspace = true

[features]
default = ["std", "cosmos"]
std = ["traverse-core/std", "dep:tokio", "dep:reqwest"]
no-std = ["traverse-core/no-std"]
minimal = ["traverse-core/minimal"]
cosmos = ["dep:cosmos-sdk-proto", "dep:cosmwasm-schema", "dep:cosmwasm-std"]
client = ["std", "cosmos", "dep:reqwest", "dep:tokio"]

[dependencies]
traverse-core = { path = "../traverse-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
hex.workspace = true
thiserror.workspace = true
sha2.workspace = true
base64.workspace = true
ics23 = { workspace = true, optional = true }

# Cosmos-specific dependencies (optional)
cosmwasm-schema = { workspace = true, optional = true }
cosmwasm-std = { workspace = true, optional = true }
cosmos-sdk-proto = { workspace = true, optional = true }

# Optional HTTP client for live contract queries
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
