# Ethereum-specific implementation for ZK storage path generation
[package]
name = "traverse-ethereum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Ethereum-specific implementation for ZK storage path generation"
keywords.workspace = true
categories.workspace = true

[features]
default = []
client = ["dep:valence-domain-clients"]

[dependencies]
traverse-core = { path = "../traverse-core", features = ["std", "serde_json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
hex.workspace = true
tiny-keccak.workspace = true
ethers.workspace = true
rlp.workspace = true
tokio.workspace = true
reqwest = { version = "0.11", features = ["json"] }

# Optional valence-domain-clients integration
valence-domain-clients = { git = "https://github.com/timewave-computer/valence-domain-clients.git", branch = "main", optional = true }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true 