# Ethereum-specific implementation for ZK storage path generation
[package]
name = "traverse-ethereum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Ethereum-specific implementation for ZK storage path generation"
keywords.workspace = true
categories.workspace = true

[features]
default = ["std", "ethereum"]
std = ["traverse-core/std", "dep:tokio", "dep:reqwest"]
ethereum = ["dep:tiny-keccak", "dep:rlp"]
minimal = ["traverse-core/minimal"]

# Lightweight alloy with selective imports
lightweight-alloy = [
    "ethereum", 
    "std", 
    "dep:alloy-primitives", 
    "dep:alloy-sol-types",
    "dep:alloy-rpc-types-eth",
    "dep:alloy-provider",
    "dep:alloy-transport-http"
]

# Client integration
client = ["ethereum", "std", "dep:valence-domain-clients"]

[dependencies]
traverse-core = { path = "../traverse-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
hex = { workspace = true, features = ["serde"] }

# Ethereum-specific dependencies (optional)
tiny-keccak = { workspace = true, optional = true }
rlp = { workspace = true, optional = true }

# Heavy dependencies (optional)
tokio = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

# Selective alloy imports - only the specific crates we need
alloy-primitives = { workspace = true, optional = true }
alloy-sol-types = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }
alloy-provider = { workspace = true, optional = true }
alloy-transport-http = { workspace = true, optional = true }

# Optional valence-domain-clients integration
valence-domain-clients = { git = "https://github.com/timewave-computer/valence-domain-clients.git", rev = "d2fd402366d54f4421c15c7b33ccd6eecbfbcd2b", optional = true }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[test]]
name = "integration"
required-features = ["std", "ethereum"]

[[test]]
name = "complex_contracts"
required-features = ["std", "ethereum"] 